しゃっふるする動きをつけた。transition

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,11 +83,15 @@ table tr:nth-of-type(even) {
 
 /* 現れている最中と、 消えている最中は、 0.5秒 */
 .v-enter-active, .v-leave-active {
-    transition: 0.5s;
+    transition: 5s;
 }
 
-/* 現れる前の状態と、 消えたときの状態は、 透明度0で、 下へ20移動 */
+/* 現れる前の状態と、 消えたときの状態は、 透明度0で、 下へ20移動 */
 .v-enter, .v-leave-to {
     opacity: 0;
     transform: translateY(20px);
+}
+
+.v-move{
+    transition: 5s;
 }
