--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,3 +100,11 @@ table tr:nth-of-type(even) {
     text-decoration: line-through;
     color: lightgray;
 }
+
+.my-comp {
+    width: 300px;
+    background-color: #ffffe0;
+    border: solid darkorange;
+    border-radius: 8px;
+    padding: 8px;
+}
